# system-design-lab-6

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  event_catalog.md  event_driven_design.md  openapi.yaml  tests.sh
include/: auth.h  event_consumer.h  event_producer.h  handlers.h  storage.h
src/: auth.cpp  consumer_main.cpp  event_consumer.cpp  event_producer.cpp  handlers.cpp  main.cpp  storage.cpp
